# Packets_entry

./: .gitignore  FINAL_PROJECT_AUDIT.md  README.md  pyproject.toml  requirements.txt  test_dpi.pcap
my_packet_analyzer/: __init__.py  main.py
my_packet_analyzer/capture/: __init__.py  pcap.py
my_packet_analyzer/core/: __init__.py  engine.py  queue.py  types.py
my_packet_analyzer/dpi/: __init__.py  extractor.py
my_packet_analyzer/parser/: __init__.py  protocols.py
my_packet_analyzer/rules/: __init__.py  manager.py
my_packet_analyzer/tracker/: __init__.py  flow.py
my_packet_analyzer/utils/: __init__.py  helpers.py
tests/: test_extractor.py  test_parser.py  test_rules.py
